deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APPLICATION_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APPLICATION_NAME}
  template:
    metadata:
      labels:
        app: ${APPLICATION_NAME}
    spec:
      volumes:
      - name: ${APPLICATION_NAME}
        persistentVolumeClaim:
          claimName: ${APPLICATION_NAME}
      containers:
      - name: ${APPLICATION_NAME}
        image: ${CONTAINER_REGISTRY}/${APPLICATION_NAME}
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/usr/share/pv"
          name: ${APPLICATION_NAME}
      imagePullSecrets:
      - name: registry-credentials # Credentials to pull image from registry
---
apiVersion: v1
kind: Service
metadata:
  name: ${APPLICATION_NAME}
spec:
  type: ClusterIP
  selector:
    app: ${APPLICATION_NAME}
  ports:
  - port: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${APPLICATION_NAME} # Name of the ingress, named after the application
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # This is necessary, no idea why
spec:
  tls:
  - hosts:
    - ${CERTIFICATE_DOMAIN}
    secretName: ${APPLICATION_NAME} # Name of the secret, i.e. the certificates
  rules:
  - host: ${CERTIFICATE_DOMAIN}
    http:
      paths:
      - path: /
        backend:
          serviceName: ${APPLICATION_NAME} # Name of the service, named after the app
          servicePort: 80
